--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
 # Thêm 'NEXT_PUBLIC' ở trước với những tham số muốn Client/Browser hiểu đc (nếu k thì chỉ Server Component ms hiểu)
 NEXT_PUBLIC_BACKEND_URL= http://localhost:8000
+
+GITHUB_ID=7873492bebe3125abfb6
+GITHUB_SECRET=a6a725e3f509bf637a59d8fd38a97e29ce8df2f8
+
+NEXTAUTH_URL=http://localhost:3000
+NO_SECRET= sherlockNguyenDev
+
