--- a/.env.development
+++ b/.env.development
@@ -5,5 +5,15 @@ GITHUB_ID=7873492bebe3125abfb6
 GITHUB_SECRET=a6a725e3f509bf637a59d8fd38a97e29ce8df2f8
 
 NEXTAUTH_URL=http://localhost:3000
-NO_SECRET= sherlockNguyenDev
+NEXTAUTH_SECRET= sherlockNguyenDev
+
+REVALIDATE_SECRET= sherlockNguyenDev
+
+GOOGLE_ID=648099879444-07j2kkl4org6re9jm7ctkfgq7gmtf06t.apps.googleusercontent.com
+GOOGLE_SECRET=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
+
+
+#SETUP thời gian hết hạn để refresh token
+TOKEN_EXPIRE_NUMBER=30
+TOKEN_EXPIRE_UNIT=seconds
 
