--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dayjs": "1.11.10",
     "next": "13.4.19",
     "next-auth": "4.23.1",
+    "next-nprogress-bar": "^2.1.2",
     "query-string": "8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -28,6 +29,7 @@
     "react-h5-audio-player": "3.8.6",
     "react-slick": "0.29.0",
     "sass": "1.67.0",
+    "sharp": "^0.33.2",
     "slick-carousel": "1.8.1",
     "slugify": "1.6.6",
     "wavesurfer.js": "7.3.1"
